added css files and structured html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Sign Up Form</title>
 </head>
 <body>
-    
+    <section id="left-side">
+
+    </section>
+
+    <section id ="right-side" >
+
+    </section>
 </body>
 </html>
