added display to the page and flexbox

--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/assets/reset.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Sign Up Form</title>
-</head>
-<body>
-    <section id="left-side">
+  </head>
 
-    </section>
+  <body>
+    <div id="container">
+      <section id="left-side">
+        <div id="logo-banner">
+          <img id="logo" src="" alt="" />
+          <h1 id="logo-name">Luigi</h1>
+        </div>
+      </section>
 
-    <section id ="right-side" >
-
-    </section>
-</body>
+      <section id="right-side">
+        <p>
+          This is a practice website. There is nothing to do here but to see how
+          my practice is coming along. We listen and we do not judge. Unless it
+          is good criticism then that is fine. Anyway have a good day.
+        </p>
+        <p>All hail the fake form website.</p>
+        <form action="">
+          <div class="form-line">
+            <label for="fname">First name</label><br />
+            <input type="text" id="fname" name="fname" /><br />
+            <label for="lname">Last name</label><br />
+            <input type="text" id="lname" name="lname" /><br />
+          </div>
+          <div class="form-line">
+            <label for="email">Email</label><br />
+            <input type="text" id="email" name="email" /><br />
+            <label for="pnumber">Phone Number</label><br />
+            <input type="text" id="pnumber" name="pnumber" /><br />
+          </div>
+          <div class="form-line">
+            <label for="password">Password</label><br />
+            <input type="text" id="password" name="password" /><br />
+            <label for="cPassword">ConfirmPassword</label><br />
+            <input type="text" id="cPassword" name="cPassword" /><br />
+          </div>
+        </form>
+      </section>
+    </div>
+  </body>
 </html>
