completed left side section

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/reset.css">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/reset.css" />
+    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Boldonse&display=swap"
+      rel="stylesheet"
+    />
     <title>Sign Up Form</title>
   </head>
 
@@ -12,7 +18,7 @@
     <div id="container">
       <section id="left-side">
         <div id="logo-banner">
-          <img id="logo" src="" alt="" />
+          <img id="logo-img" src="/assets/images/luigi-icon-logo.png" alt="logo" />
           <h1 id="logo-name">Luigi</h1>
         </div>
       </section>
