--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p class="intro">All hail the fake form website.</p>
         </div>
 
-        <form action="">
+        <form id="signup-form">
           <h2 id="form-title">Lets do this!</h2>
           <div id="form-structure">
             <div class="form-row">
@@ -55,27 +55,31 @@
             <div class="form-row">
               <div class="form-input">
                 <label for="email">Email</label><br />
-                <input type="text" id="email" name="email" /><br />
+                <input type="email" id="email" name="email" /><br />
               </div>
               <div class="form-input">
                 <label for="pnumber">Phone Number</label><br />
-                <input type="text" id="pnumber" name="pnumber" /><br />
+                <input type="number" id="pnumber" name="pnumber" /><br />
               </div>
             </div>
 
             <div class="form-row">
               <div class="form-input">
                 <label for="password">Password</label><br />
-                <input type="text" id="password" name="password" /><br />
+                <input type="password" id="password" name="password" required/><br />
               </div>
               <div class="form-input">
                 <label for="cPassword">ConfirmPassword</label><br />
-                <input type="text" id="cPassword" name="cPassword" /><br />
+                <input type="password" id="cPassword" name="cPassword" required/><br />
               </div>
             </div>
           </div>
         </form>
+
+        <button type="submit" form="signup-form">Create Account</button>
+        <p id="login">Already have account? <span>Log in</span></p>
       </section>
+
     </div>
   </body>
 </html>
